--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,24 @@ button:hover {
   display: block;
 }
 
+
+a.button {
+  display: inline-block;
+  margin: 5px;
+  cursor: pointer;
+  font-size: 100%;
+  background-color: #563d7c;
+  border-radius: 5px;
+  padding: 2px 10px;
+  color: white;
+  border: 0;
+  transition: background-color 0.1s;
+
+  
+
+}
+
+
 input[type="text"] {
   font-size: 100%;
 }
